# portfolio-site

./: .gitignore  Caddyfile  README.md  next.config.js  package.json  tailwind.config.js  tsconfig.json
pages/: index.js
refactor/: Cargo.toml  index.html  tailwind.config.js
refactor/src/: lib.rs
refactor/src/app/: contact.rs  home.rs  mod.rs  projects.rs
refactor/src/components/: button.rs  contact_form.rs  footer.rs  mod.rs  project.rs  project_image_display.rs  submit_form_button.rs  technologies.rs  typical.rs  youtube_embed.rs
refactor/src/components/nav_bar/: helpers.rs  linked_route.rs  mod.rs  navigator.rs
refactor/src/models/: constants.rs  enums.rs  types.rs
refactor/style/: main.css
src/actions/: submitContactForm.ts
src/app/: globals.css  head.tsx  layout.tsx  page.tsx
src/app/contact/: page.tsx
src/app/projects/: page.tsx
src/components/: Button.tsx  ContactForm.tsx  Project.tsx  ProjectImageDisplay.tsx  SubmitFormButton.tsx  Technologies.tsx  YouTubeEmbed.tsx
src/components/NavBar/: LinkedRoute.tsx  Navigator.tsx  helpers.ts
src/components/Typical/: Typical.jsx
src/models/: constants.ts  enums.ts  types.ts
