[package]
name = "portfolio"
version = "0.1.1"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
leptos = { version = "0.6", features = ["csr"] }
leptos_router = { version = "0.6", features = ["csr"] }
leptos_meta = { version = "0.6", features = ["csr"] }
console_log = "1"
log = "0.4"
wasm-bindgen = "=0.2.99"
console_error_panic_hook = "0.1"
web-sys = { version = "=0.3.76", features = ["Window", "Document", "Element", "HtmlElement", "CssStyleDeclaration", "ScrollToOptions", "HtmlInputElement", "HtmlTextAreaElement", "FormData", "Event", "console"] }
gloo-timers = { version = "0.3", features = ["futures"] }
gloo-net = "0.5"
serde = { version = "1", features = ["derive"] }
wasm-bindgen-futures = "=0.4.49"
